Add more markdown to eval setup (#333)
* Minor fixes to agents notebook

* remove stray '

* ready

* small updates

* fix spacing

* separate and add md to eval setup

---------

Co-authored-by: Shayak Sen <shayak@truera.com>

--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
@@ -52,7 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up our Llama-Index App"
+    "### Set up our Llama-Index App\n",
+    "\n",
+    "For this app, we will use a tool from Llama-Index to connect to Yelp and allow the Agent to search for business and fetch reviews."
    ]
   },
   {
@@ -138,13 +140,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports required for tracking and evaluation\n",
     "from trulens_eval import Feedback, OpenAI, Tru, TruBasicApp, TruLlama, Select, OpenAI as fOpenAI\n",
     "from trulens_eval.feedback import GroundTruthAgreement, Groundedness\n",
     "import numpy as np\n",
-    "from trulens_eval import OpenAI as fOpenAI\n",
     "\n",
-    "tru = Tru()\n",
+    "tru = Tru()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation setup\n",
     "\n",
+    "To set up our evaluation, we'll first create two new custom feedback functions: query_translation_score and ratings_usage. These are straight-forward prompts of the OpenAI API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class OpenAI_custom(OpenAI):\n",
     "    def query_translation_score(self, question1: str, question2: str) -> float:\n",
     "        return float(openai.ChatCompletion.create(\n",
@@ -163,8 +181,22 @@
     "            {\"role\": \"system\", \"content\": \"Your job is to respond with a '1' if the following statement mentions ratings or reviews, and a '0' if not.\"},\n",
     "            {\"role\": \"user\", \"content\": f\"STATEMENT: {last_context}\"}\n",
     "        ]\n",
-    "    )[\"choices\"][0][\"message\"][\"content\"])\n",
-    "\n",
+    "    )[\"choices\"][0][\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have all of our feedback functions available, we can instantiate them. For many of our evals, we want to check on intermediate parts of our app such as the query passed to the yelp app, or the summarization of the Yelp content. We'll do so here using Select."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "custom = OpenAI_custom()\n",
     "f_query_translation = Feedback(custom.query_translation_score).on_input().on(\n",
     "    Select.Record.calls[0].args.str_or_query_bundle # check the query bundle passed to yelp api\n",
@@ -187,6 +219,7 @@
     "\n",
     "f_groundedness = Feedback(grounded.groundedness_measure).on(\n",
     "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
+
     ").on_output().aggregate(grounded.grounded_statements_aggregator)\n"
    ]
   },
