fix langchain calls (#340)
* error handling

* prototype

--- a/trulens_eval/examples/frameworks/langchain/langchain_async.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_async.ipynb
@@ -68,6 +68,7 @@
    "outputs": [],
    "source": [
     "# Set up a language match feedback function.\n",
+    "\n",
     "tru = Tru()\n",
     "hugs = feedback.Huggingface()\n",
     "f_lang_match = Feedback(hugs.language_match).on_input_output()\n",
@@ -80,7 +81,7 @@
     "llm = ChatOpenAI(\n",
     "    temperature=0.0,\n",
     "    streaming=True, # important\n",
-    "    callbacks=[callback]\n",
+    "    # callbacks=[callback] # callback can be here or below in acall_with_record\n",
     ")\n",
     "chain = LLMChain(llm=llm, prompt=prompt)\n",
     "tc = tru.Chain(chain, feedbacks=[f_lang_match])\n",
@@ -91,6 +92,7 @@
     "f_res_record = asyncio.create_task(\n",
     "    tc.acall_with_record(\n",
     "        inputs=dict(question=message),\n",
+    "        callbacks=[callback]\n",
     "    )\n",
     ")\n",
     "\n",
@@ -99,7 +101,7 @@
     "    print(token)\n",
     "\n",
     "# By now the acall_with_record results should be ready.\n",
-    "res, record = await f_res_record\n",
+    "res = await f_res_record\n",
     "\n",
     "res"
    ]
@@ -132,8 +134,8 @@
     "    prompt = PromptTemplate.from_template(\"Honestly answer this question: {question}.\")\n",
     "    llm = ChatOpenAI(\n",
     "        temperature=0.0,\n",
-    "        streaming=True, # important\n",
-    "        callbacks=[callback]\n",
+    "        streaming=True# important\n",
+    "        # callbacks=[callback]\n",
     "    )\n",
     "    chain = LLMChain(llm=llm, prompt=prompt)\n",
     "    tc = tru.Chain(chain, feedbacks=[f_lang_match])\n",
@@ -141,6 +143,7 @@
     "    f_res_record = asyncio.create_task(\n",
     "        tc.acall_with_record(\n",
     "            inputs=dict(question=message),\n",
+    "            callbacks=[callback]\n",
     "        )\n",
     "    )\n",
     "    \n",
