add grounded in RAG example (#347)

--- a/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
@@ -649,7 +649,13 @@
     "    Select.Record.app.combine_documents_chain._call.args.inputs.input_documents[:].page_content\n",
     ").aggregate(np.mean)\n",
     "# First feedback argument is set to main app input, and the second is taken from\n",
-    "# the context sources as passed to an internal `combine_docs_chain._call`.\n"
+    "# the context sources as passed to an internal `combine_docs_chain._call`.\n",
+    "\n",
+    "# Groundedness between each context chunk and the response.\n",
+    "grounded = feedback.Groundedness(groundedness_provider=openai)\n",
+    "f_groundedness = feedback.Feedback(grounded.groundedness_measure).on(\n",
+    "    Select.Record.app.combine_documents_chain._call.args.inputs.input_documents[:].page_content\n",
+    ").on_output().aggregate(grounded.grounded_statements_aggregator)"
    ]
   },
   {
@@ -658,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc_v01 = Tru().Chain(app_id = 'v01_langchain_qa', chain=qa_with_sources, feedbacks=[f_qa_relevance, f_qs_relevance], feedback_mode=FeedbackMode.WITH_APP)"
+    "tc_v01 = Tru().Chain(app_id = 'v01_langchain_qa', chain=qa_with_sources, feedbacks=[f_qa_relevance, f_qs_relevance, f_groundedness], feedback_mode=FeedbackMode.WITH_APP)"
    ]
   },
   {
@@ -923,7 +929,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc_v02 = Tru().Chain(app_id = 'v02_langchain_qa', chain=qa_with_sources_v2, feedbacks=[f_qa_relevance, f_qs_relevance], feedback_mode=FeedbackMode.WITH_APP)"
+    "tc_v02 = Tru().Chain(app_id = 'v02_langchain_qa', chain=qa_with_sources_v2, feedbacks=[f_qa_relevance, f_qs_relevance, f_groundedness], feedback_mode=FeedbackMode.WITH_APP)"
    ]
   },
   {
