--- a/trulens_eval/examples/no_framework_quickstart.ipynb
+++ b/trulens_eval/examples/no_framework_quickstart.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quickstart\n",
+    "# No Framework Quickstart\n",
     "\n",
     "In this quickstart you will create a simple text to text application and learn how to log it and get feedback.\n",
     "\n",
