--- a/trulens_eval/trulens_eval/tests/pr_relevance_smoke_tests.ipynb
+++ b/trulens_eval/trulens_eval/tests/pr_relevance_smoke_tests.ipynb
@@ -4,22 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PR Relevance Feedback Requirements\n",
+    "## Prompt Response Relevance Feedback Requirements\n",
     "1. Relevance requires adherence to the entire prompt.\n",
     "2. Responses that don't provide a definitive answer can still be relevant\n",
     "3. Admitting lack of knowledge and refusals are still relevant.\n",
     "4. Feedback mechanism should differentiate between seeming and actual relevance.\n",
-    "5. Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
+    "5. Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query.\n",
+    "\n",
+    "Below are examples of usage. Find the [results](#test-results) of the tests tabulated at the bottom."
    ]
   },
   {
@@ -28,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports main tools:\n",
+    "# Import relevance feedback function\n",
     "from trulens_eval.feedback import OpenAI\n",
     "openai = OpenAI()\n",
     "relevance = openai.relevance"
@@ -38,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Relevance requires adherence to the entire query."
+    "### Relevance requires adherence to the entire query."
    ]
   },
   {
@@ -177,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Responses without a definitive answer are still relevant."
+    "### Responses without a definitive answer are still relevant."
    ]
   },
   {
@@ -256,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Refusals are still relevant."
+    "### Refusals are still relevant."
    ]
   },
   {
@@ -285,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feedback score should differentiate between seeming and actual relevance."
+    "### Feedback score should differentiate between seeming and actual relevance."
    ]
   },
   {
@@ -364,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query."
+    "### Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query."
    ]
   },
   {
@@ -426,29 +418,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run smoke tests"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install tabulate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tabulate import tabulate\n",
-    "\n",
     "def run_all_smoke_tests():\n",
     "    smoke_tests = [\n",
     "        test_lowadherence_short, test_lowadherence_medium, test_lowadherence_long,\n",
@@ -507,8 +481,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -531,13 +512,14 @@
    ],
    "source": [
     "# Print the table\n",
+    "from tabulate import tabulate\n",
     "print(\"\\nOverall Results:\")\n",
     "print(tabulate(overall_data, headers=[\"Metric\", \"Count\"], tablefmt=\"grid\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.3 ('pinecone_example')",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -616,12 +598,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c68aa9cfa264c12f07062d08edcac5e8f20877de71ce1cea15160e4e8ae95e66"
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
    }
   }
  },
