--- a/trulens_eval/trulens_eval/tests/qs_relevance_smoke_tests.ipynb
+++ b/trulens_eval/trulens_eval/tests/qs_relevance_smoke_tests.ipynb
@@ -9,26 +9,26 @@
     "2. Long context with small relevant chunks are relevant.\n",
     "3. Context that provides no answer can still be relevant.\n",
     "4. Feedback mechanism should differentiate between seeming and actual relevance.\n",
-    "5. Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
+    "5. Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query.\n",
+    "\n",
+    "Below are examples of usage. Find the [results](#test-results) of the tests tabulated at the bottom."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No .env found in /Users/jreini/Desktop/development/trulens/trulens_eval/trulens_eval/tests or its parents. You may need to specify secret keys in another manner.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Imports main tools:\n",
+    "# Import qs relevance feedback function\n",
     "from trulens_eval.feedback import OpenAI\n",
     "openai = OpenAI()\n",
     "relevance = openai.qs_relevance"
@@ -407,29 +407,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run smoke tests"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install tabulate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tabulate import tabulate\n",
-    "\n",
     "def run_all_smoke_tests():\n",
     "    smoke_tests = [\n",
     "        test_lowadherence_short, test_lowadherence_medium, test_lowadherence_long,\n",
@@ -486,8 +468,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Overall Results:\n",
+      " #Overall Results:\n",
       "+-----------------+---------+\n",
       "| Metric          |   Count |\n",
       "+=================+=========+\n",
@@ -510,13 +499,14 @@
    ],
    "source": [
     "# Print the table\n",
-    "print(\"\\nOverall Results:\")\n",
+    "from tabulate import tabulate\n",
+    "print(\"\\n #Overall Results:\")\n",
     "print(tabulate(overall_data, headers=[\"Metric\", \"Count\"], tablefmt=\"grid\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
