--- a/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quickstart\n",
+    "# Langchain Quickstart\n",
     "\n",
     "In this quickstart you will create a simple LLM Chain and learn how to log it and get feedback on an LLM response.\n",
     "\n",
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "truchain = TruChain(chain,\n",
-    "    app_id='Chain3_ChatApplication',\n",
+    "    app_id='Chain1_ChatApplication',\n",
     "    feedbacks=[f_lang_match])"
    ]
   },
