Multi output and supplied name (#342)
* take care of db migration and input framework

* progress on e2e

* add migration instructions

* fix version

* fix protobuf compat

* bring compat db up to date

* migrate advice

* multi and name write

* handle aggretation

* fix type

* working version

* update documentation notebook

* Update db_migration.py

* test 030

* only test regression

* db update

* documentation

* fix multi-output storage

--- a/trulens_eval/examples/custom_feedback_functions.ipynb
+++ b/trulens_eval/examples/custom_feedback_functions.ipynb
@@ -84,6 +84,74 @@
     ")\n",
     "tru.add_feedbacks(feedback_results)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0383846e",
+   "metadata": {},
+   "source": [
+    "## Multi-Output Feedback functions\n",
+    "Trulens also supports multi-output feedback functions. As a typical feedback function will output a float between 0 and 1, multi-output should output a dictionary of `output_key` to a float between 0 and 1. The feedbacks table will display the feedback with column `feedback_name:::outputkey`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e6d785b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_output_feedback = Feedback(lambda input_param: {'output_key1': 0.1, 'output_key2': 0.9}, name=\"multi\").on(\n",
+    "    input_param=Select.RecordOutput\n",
+    ")\n",
+    "feedback_results = tru.run_feedback_functions(\n",
+    "    record=record,\n",
+    "    feedback_functions=[multi_output_feedback]\n",
+    ")\n",
+    "tru.add_feedbacks(feedback_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8f9fb6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aggregators will run on the same dict keys.\n",
+    "import numpy as np\n",
+    "multi_output_feedback = Feedback(lambda input_param: {'output_key1': 0.1, 'output_key2': 0.9}, name=\"multi-agg\").on(\n",
+    "    input_param=Select.RecordOutput\n",
+    ").aggregate(np.mean)\n",
+    "feedback_results = tru.run_feedback_functions(\n",
+    "    record=record,\n",
+    "    feedback_functions=[multi_output_feedback]\n",
+    ")\n",
+    "tru.add_feedbacks(feedback_results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d18c9331",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For multi-context chunking, an aggregator can operate on a list of multi output dictionaries.\n",
+    "def dict_aggregator(list_dict_input):\n",
+    "    agg = 0\n",
+    "    for dict_input in list_dict_input:\n",
+    "        agg += dict_input['output_key1']\n",
+    "    return agg\n",
+    "multi_output_feedback = Feedback(lambda input_param: {'output_key1': 0.1, 'output_key2': 0.9}, name=\"multi-agg-dict\").on(\n",
+    "    input_param=Select.RecordOutput\n",
+    ").aggregate(dict_aggregator)\n",
+    "feedback_results = tru.run_feedback_functions(\n",
+    "    record=record,\n",
+    "    feedback_functions=[multi_output_feedback]\n",
+    ")\n",
+    "tru.add_feedbacks(feedback_results)\n"
+   ]
   }
  ],
  "metadata": {
