--- a/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
@@ -111,6 +111,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION\"]=\"python\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -992,7 +1002,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1006,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
