Bring your own class (#362)
* working on instrumentation bugs

* clear output

* Example behavior

* starting additions to app for custom class instrumentation

* work

* basic prototype for custom class instrumentation

* typos

* adding docs

* finishing up

* fixing truchain

* fixing

* lang chain stack fixes

* more fixes

* notes and pr fix

* formatting fixes

* notes and formatting

* fixing more notes

* callstack fixes

* work

* final fixes

* nits

* add docs to example and remove some debugging things

* more notes

---------

Co-authored-by: Shayak Sen <shayak@truera.com>
Co-authored-by: rshih32 <rick@ailens.io>

--- a/trulens_eval/examples/frameworks/llama_index/llama_index_async.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_async.ipynb
@@ -52,8 +52,8 @@
    "source": [
     "# Imports main tools:\n",
     "from trulens_eval import TruLlama, Feedback, Tru, feedback, Select\n",
-    "tru = Tru()\n",
     "\n",
+    "tru = Tru()\n",
     "\n",
     "from llama_index import VectorStoreIndex, SimpleWebPageReader\n",
     "\n",
@@ -110,9 +110,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tru_query_engine = TruLlama(query_engine,\n",
-    "    feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance]\n",
+    "tru_query_engine = TruLlama(\n",
+    "    query_engine, feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tru_query_engine.print_instrumented()"
    ]
   },
   {
@@ -143,8 +152,8 @@
    "outputs": [],
    "source": [
     "query_engine = index.as_query_engine(streaming=True)\n",
-    "tru_query_engine = TruLlama(query_engine,\n",
-    "    feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance]\n",
+    "tru_query_engine = TruLlama(\n",
+    "    query_engine, feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance]\n",
     ")"
    ]
   },
@@ -154,7 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response, record = tru_query_engine.query_with_record(\"What did the author do growing up?\")\n",
+    "response, record = tru_query_engine.query_with_record(\n",
+    "    \"What did the author do growing up?\"\n",
+    ")\n",
     "\n",
     "for c in response.response_gen:\n",
     "    print(c)"
@@ -167,6 +178,15 @@
    "outputs": [],
    "source": [
     "record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc = Tru().start_dashboard(force=True, _dev=Path.cwd().parent.parent.parent)"
    ]
   },
   {
