--- a/trulens_eval/examples/trubot/trubot_tests.ipynb
+++ b/trulens_eval/examples/trubot/trubot_tests.ipynb
@@ -24,6 +24,7 @@
     "sys.path.append(str(Path().cwd().parent.parent.resolve()))\n",
     "\n",
     "# Uncomment to get more debugging printouts:\n",
+    "\n",
     "\"\"\"\n",
     "import logging\n",
     "\n",
@@ -78,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = get_or_make_app(cid=None)"
+    "app = get_or_make_app(cid=None, selector=3)"
    ]
   },
   {
@@ -133,6 +134,89 @@
    "outputs": [],
    "source": [
     "thread = Tru().start_evaluator(restart=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise RuntimeError(\"stop here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instrumentation Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import asyncio\n",
+    "import os\n",
+    "import unittest\n",
+    "from unittest import main\n",
+    "\n",
+    "from langchain import LLMChain\n",
+    "from langchain import PromptTemplate\n",
+    "from langchain.callbacks import AsyncIteratorCallbackHandler\n",
+    "from langchain.chains import ConversationalRetrievalChain\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.chains import SimpleSequentialChain\n",
+    "from langchain.chat_models.openai import ChatOpenAI\n",
+    "from langchain.llms.openai import OpenAI\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "from langchain.schema.messages import HumanMessage\n",
+    "from langchain.vectorstores import Pinecone\n",
+    "import pinecone\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "\n",
+    "from trulens_eval import Tru\n",
+    "from trulens_eval.keys import check_keys\n",
+    "from trulens_eval.provider_apis import Endpoint\n",
+    "from trulens_eval.provider_apis import OpenAIEndpoint\n",
+    "from trulens_eval.tru_chain import TruChain\n",
+    "import trulens_eval.utils.python  # makes sure asyncio gets instrumented\n",
+    "\n",
+    "check_keys(\n",
+    "    \"OPENAI_API_KEY\", \"HUGGINGFACE_API_KEY\", \"PINECONE_API_KEY\", \"PINECONE_ENV\"\n",
+    ")\n",
+    "\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"Honestly answer this question: {question}.\"\"\"\n",
+    ")\n",
+    "llm1 = OpenAI(temperature=0.0, streaming=False, cache=False)\n",
+    "llm2 = OpenAI(temperature=0.0, streaming=False, cache=False)\n",
+    "\n",
+    "chain1 = LLMChain(llm=llm1, prompt=prompt)\n",
+    "# tc1 = Tru().Chain(chain1)\n",
+    "\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "    memory_key=\"chat_history\",\n",
+    "    input_key=\"question\",\n",
+    "    llm=llm1, # same llm1 now appears in a different spot\n",
+    ")\n",
+    "chain2 = LLMChain(llm=llm2, prompt=prompt, memory=memory)\n",
+    "tc2 = Tru().Chain(chain2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc2.print_instrumented()"
    ]
   }
  ],
