splitting large files and organizing into folders (#374)
* splitting large files and organizing into folders

* patching up reorg

* more patching

* more patch

* split large readme into README.md

* nits

* add 2 more files to index

* some bugfixes

* typo

* link feedback README.md

* add custom app to docs index

--- a/trulens_eval/examples/trubot/trubot_populate_db.ipynb
+++ b/trulens_eval/examples/trubot/trubot_populate_db.ipynb
@@ -55,7 +55,16 @@
     "pp = PrettyPrinter()\n",
     "\n",
     "# Reset the database if needed:\n",
-    "Tru().reset_database()"
+    "# Tru().reset_database()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tru().migrate_database()"
    ]
   },
   {
