Updates to documentation for remote database (#387)
* Docs updates for remote db

* Minor doc update

---------

Co-authored-by: Shayak Sen <shayak@truera.com>

--- a/trulens_eval/examples/logging.ipynb
+++ b/trulens_eval/examples/logging.ipynb
@@ -5,7 +5,7 @@
    "id": "454903c2",
    "metadata": {},
    "source": [
-    "# Logging\n",
+    "# Logging Methods\n",
     "\n",
     "## Automatic Logging\n",
     "\n",
