splitting util.py (#383)
* splitting util.py

* nit

* more cleanup

* final rewrites

* adjust hierarchy writeup

--- a/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
@@ -63,9 +63,8 @@
    "outputs": [],
    "source": [
     "# Imports main tools:\n",
-    "from trulens_eval import TruLlama, Feedback, Tru, feedback, FeedbackMode\n",
+    "from trulens_eval import TruLlama, Feedback, Tru, feedback\n",
     "from trulens_eval.feedback import GroundTruthAgreement\n",
-    "from trulens_eval.util import jsonify\n",
     "tru = Tru()"
    ]
   },
