--- a/trulens_eval/examples/trubot/trubot_example.ipynb
+++ b/trulens_eval/examples/trubot/trubot_example.ipynb
@@ -92,6 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from pprint import PrettyPrinter\n",
     "\n",
     "# Imports from langchain to build app:\n",
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
