--- a/trulens_eval/examples/trubot/trubot_populate_db.ipynb
+++ b/trulens_eval/examples/trubot/trubot_populate_db.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.util import TP\n",
+    "from trulens_eval.utils.threading import TP\n",
     "from trulens_eval import Tru\n",
     "\n",
     "from pprint import PrettyPrinter\n",
