--- a/trulens_eval/examples/trubot/webindex.ipynb
+++ b/trulens_eval/examples/trubot/webindex.ipynb
@@ -74,7 +74,7 @@
     "from tqdm.auto import tqdm\n",
     "from url_normalize import url_normalize\n",
     "\n",
-    "from trulens_eval.util import first\n",
+    "from trulens_eval.utils.containers import first\n",
     "from trulens_eval.utils.text import UNICODE_CHECK\n",
     "\n",
     "TRUERA_BASE_URL = 'https://truera.com/'\n",
